[metadata]
name = vcd-iam-sso
version = attr: iamvcd.__version__
description = VCD/IAM SSO integration Command Line Tool
author = Al Finkelstein
author_email = al.finkelstein@ibm.com
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    requests>=2.26.0
    pycryptodome>=3.10.1
    ilcli>=0.3.2

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    iamvcd=iamvcd.cli:run
